# emilgedda.github.io

./: .gitignore  .gitmodules  CNAME  atom.xml  circle.yml  emilgedda-github-io.cabal  index.html  rss.xml  site.hs
about/: index.html
archive/: index.html
contact/: index.html
posts/: 2015-08-12-spqr.html  2015-08-12-spqr.markdown  2017-04-27-markdown-test.md  2020-02-06-life-is-sad.html
posts/2015/08/12/spqr/: index.html
posts/2015/10/07/rosa-rosa-rosam/: index.html
posts/2015/11/28/carpe-diem/: index.html
posts/2015/12/07/tu-quoque/: index.html
posts/2017/04/27/markdown-test/: index.html
templates/: default.html  post.tex
