name:               emilgedda-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , split == 0.2.*
                  , filepath == 1.4.*
                  , pandoc == 1.16.*
                  , process == 1.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
